--- a/styles/index.css
+++ b/styles/index.css
@@ -39,6 +39,7 @@ h2{
 footer{
 
 text-align: center;
+font-size: x-large;
 }
 
 
@@ -82,6 +83,8 @@ margin: 1rem;
     backdrop-filter: blur(5px); 
     border-radius: 15px;
     border: 3px solid; 
+    max-width: 80%;
+    margin: 0 auto;
 
 }
 .centered{
@@ -89,7 +92,8 @@ margin: 1rem;
     align-items: center;
     justify-content: center;
 }
-#content{
-    max-width: 80%;
-    margin: 0 auto;
+
+#assignmentPortal{
+    width: 100%;
+    /* background-color: aliceblue; */
 }
