--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
 
 html{
@@ -14,6 +15,7 @@ body{
 }
 
 header{
+    display: none;
     background-color: rgba(240, 248, 255, 0.861);
     height: 50px;
     border-bottom : solid 4px;
@@ -23,12 +25,13 @@ nav{
     display: flex;
     justify-content: space-around;
     align-items: center;
+
     
 }
 nav a{
     text-decoration: none;
     color: black;
-    font-size: 3vw;
+    font-size: 2rem;
 }
 
 h1{
@@ -80,7 +83,7 @@ margin: 1rem;
 
 .panel{
    text-align: center;
-    background-color: rgba(255, 255, 255, 0.364);
+   background-color: aliceblue;
     padding: 5vw;
     backdrop-filter: blur(5px); 
     border-radius: 15px;
@@ -90,7 +93,7 @@ margin: 1rem;
 
 }
 .centered{
-    display: flex;
+    display: block;
     align-items: center;
     justify-content: center;
 }
