--- a/designConcepts/styles/small.css
+++ b/designConcepts/styles/small.css
@@ -45,6 +45,9 @@ p{
     overflow: hidden;
     
 }
+.panel p{
+    padding: 2vw;
+}
 .panelHeading{
     margin: 0;
     background-color: lightgrey;
