--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -1,5 +1,8 @@
 @media (min-width: 400px) {
     main{
+        flex-direction: unset;
+        align-items: unset;
+        justify-content: unset;
         display: grid;
         grid-template-areas: 
         "a a"
@@ -10,26 +13,24 @@
         
         ;
     }
-    .panel{
 
-    }
     #hero{
-        grid-area: "a";
+        grid-area: a;
         
     }
 
     #news{
-        grid-area: "b";
+        grid-area: b;
 
     }
     #spotlight{
-        grid-area: "c";
+        grid-area: c;
     }
     #event{
-        grid-area: "d";
+        grid-area: d;
     }
     #weather{
-        grid-area: "e";
+        grid-area: e;
     }
     
 }
