--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -82,7 +82,32 @@ flex-direction: column;
     border: solid 3px black;
     border-radius: 10px;
     box-shadow: 5px 3px 10px black;
+    position: relative;
 }
+.panel img{
+    width: 100%;
+    object-fit: fill;
+    overflow: hidden;
+}
+.panel h3{
+    position: absolute;
+    top: 0;
+    left:50%;
+    transform: translate(-50%);
+    background-color: rgba(255, 255, 255, 0.619);
+    border: solid 1px black;
+    border-radius: 5px;
+}
+.panel p{
+    position: absolute;
+    top: 20%;
+    left:50%;
+    transform: translate(-50%);
+    background-color: rgba(255, 255, 255, 0.619);
+    border: solid 1px black;
+    border-radius: 5px;
+}
+
 
 
 footer{
