--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -55,25 +55,43 @@ background-color: lightsteelblue;
     background-color: steelblue;
 }
 .icon{
-    width: 30vw;
+    width: 20vw;
+    max-width: 200px;
 }
+
 .header-box{
     display: flex;
     justify-content: space-around;
     align-items: center;
+    background-color: steelblue;
+    color: white;
 }
 .header-box a img{
     max-width: 5vw;
 }
 
 header h1{
-    font-size: 1.5rem;
+    font-size: 25px;
+    
 }
 main{
 display: flex;
 flex-direction: column;
 
 
+}
+#hero{
+    position: relative;
+}
+.call{
+    position: absolute;
+    top:50%;
+    left: 10%;
+    backdrop-filter: blur(5px);
+    border: solid 2px black;
+    border-radius: 10px;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.552);
 }
 
 .panel{
@@ -100,12 +118,18 @@ flex-direction: column;
 }
 .panel p{
     position: absolute;
-    top: 20%;
+    top: 30%;
     left:50%;
     transform: translate(-50%);
     background-color: rgba(255, 255, 255, 0.619);
     border: solid 1px black;
     border-radius: 5px;
+}
+.panel ul li{
+    border: solid black 1px;
+    border-radius: 3px;
+    margin: 1vw;
+    background-color: aliceblue;
 }
 
 
@@ -118,4 +142,11 @@ footer{
 footer a{
     text-decoration: none;
     color: white;
+}
+#join{
+    display: none;
+}
+#spotlight{
+    max-height: 25vh;
+    overflow-y: auto;
 }
