responsive images FINAL

--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -10,6 +10,8 @@
 
     main{
         display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(3, 1fr);
         grid-template-areas: 
         "d a a c"
         "e a a c"
