--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -57,11 +57,18 @@ background-color: lightsteelblue;
     background-color: steelblue;
 }
 .icon{
-    width: 20vw;
-    max-width: 200px;
+   background-color: white;
+   border-radius: 50%;
+   border: solid black 2px;
+   background-image: url('../images/Rex_chamber_logo-removebg-preview.webp');
+   width: 10vw;
+   height: 10vw;
+   background-size: cover;
+   background-position: center center;
 }
 
 .header-box{
+    padding: 3vw;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -79,6 +86,7 @@ header h1{
 main{
 display: flex;
 flex-direction: column;
+padding: 3vw;
 
 
 }
@@ -107,11 +115,13 @@ flex-direction: column;
     border-radius: 10px;
     box-shadow: 5px 3px 10px black;
     position: relative;
+    min-height: 40vh;
 }
 .panel img{
     width: 100%;
-    object-fit: cover;
+    object-fit: fill;
     overflow: hidden;
+    border-radius: 10px;
 }
 .panel h3{
     position: absolute;
@@ -148,6 +158,38 @@ flex-direction: column;
     margin: 1vw;
     background-color: aliceblue;
 }
+#event{
+    background-image: url("https://images.pexels.com/photos/325521/pexels-photo-325521.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+}
+
+#hero{
+    background-image:url('../images/Rexburg-ID.jpeg');
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+}
+#water-tower{
+    background-image:url('../images/Rexburg-water-tower.jpg');
+    background-size: cover;
+   width: 90%;
+   height:30%;
+}
+#night-lights{
+    background-image:url('../images/rex-temple-night.jpeg');
+    background-size: cover;
+   width: 90%;
+   height:30%;
+}
+#tabernacle{
+    background-image:url('../images/tabernacle.jpeg');
+    background-size: cover;
+   width: 90%;
+   height:30%;
+}
+
 
 
 
@@ -155,6 +197,7 @@ footer{
     color:white;
     background-color: steelblue;
     margin: 0;
+    padding: 3vw;
 }
 footer a{
     text-decoration: none;
@@ -163,7 +206,16 @@ footer a{
 #join{
     display: none;
 }
+#join-panel{
+    background-image:url("https://picsum.photos/id/277/200/");
+    background-size: cover;
+  
+}
 #spotlight{
     max-height: 25vh;
     overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
 }
