--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -219,3 +219,55 @@ footer a{
     justify-content: space-around;
     align-items: center;
 }
+
+
+form {
+			background-color: lightsteelblue;
+			border: 1px solid steelblue;
+			border-radius: 5px;
+			box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+			padding: 20px;
+		}
+		
+		label {
+			display: block;
+			font-weight: bold;
+			margin-bottom: 10px;
+		}
+		
+		input[type="text"],
+		input[type="email"],
+		input[type="tel"],
+		textarea,
+		select {
+			border: 1px solid steelblue;
+			border-radius: 5px;
+			box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.1);
+			padding: 5px;
+			width: 100%;
+		}
+		
+		input[type="text"]:focus,
+		input[type="email"]:focus,
+		input[type="tel"]:focus,
+		textarea:focus,
+		select:focus {
+			border-color: lightsteelblue;
+			box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.3);
+			outline: none;
+		}
+		
+		input[type="submit"] {
+			background-color: steelblue;
+			border: none;
+			border-radius: 5px;
+			box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+			color: white;
+			cursor: pointer;
+			padding: 10px 20px;
+			transition: background-color 0.3s ease;
+		}
+		
+		input[type="submit"]:hover {
+			background-color: black;
+		}
