--- a/bf2/styles/about.css
+++ b/bf2/styles/about.css
@@ -1,3 +1,4 @@
+
 main {
     max-width: 960px;
     margin: 40px auto;
@@ -19,13 +20,13 @@ main {
   }
 
   h1 {
-    font-size: 36px;
+
     margin-bottom: 20px;
     text-align: center;
+    margin-top: 0;
   }
 
   h2 {
-    font-size: 24px;
     margin-bottom: 10px;
   }
 
@@ -41,3 +42,11 @@ main {
     border: none;
     margin-bottom: 20px;
   }
+  footer *{
+    font-size: 1em;
+  }
+
+  .main-title {
+    font-size: 2em;
+  }
+ 
