--- a/bf2/styles/confirmation.css
+++ b/bf2/styles/confirmation.css
@@ -1,10 +1,9 @@
-body {
-    font-family: Arial, sans-serif;
-    padding: 20px;
-  }
 
+main{
+  padding: 5vw;
+}
   h1 {
-    font-size: 24px;
+
     margin-bottom: 20px;
   }
 
@@ -23,4 +22,14 @@ body {
   th {
     background-color: #f2f2f2;
     font-weight: normal;
+  }
+
+  #return-home{
+    color: black;
+    text-decoration: none;
+    transition: ease 0.5s;
+  }
+  #return-home:hover{
+    text-decoration: underline;
+    transform: scale(1.01);
   }
