--- a/bf2/styles/fresh.css
+++ b/bf2/styles/fresh.css
@@ -1,22 +1,27 @@
 .container {
-	margin: 0 auto;
+	margin: 2vw auto 2vw auto ;
 	width: 80%;
 	max-width: 800px;
 	padding: 20px;
 	border: 1px solid #ccc;
+	border-radius: 15px;
+	background-color: whitesmoke;
 }
 
 h1 {
 	text-align: center;
+	margin: 0;
+	padding: 1rem;
 }
 
 form {
 	display: flex;
 	flex-wrap: wrap;
+
 }
 
 label {
-	flex: 1 0 100%;
+	flex: 1 0 90%;
 	margin-bottom: 10px;
 }
 
@@ -25,15 +30,16 @@ input[type="email"],
 input[type="tel"],
 select,
 textarea {
-	flex: 1 0 100%;
+	flex: 1 0 90%;
 	margin-bottom: 20px;
 	padding: 10px;
 	border-radius: 4px;
 	border: 1px solid #ccc;
+
 }
 
 input[type="button"] {
-	flex: 0 0 100%;
+	flex: 0 0 900%;
 	background-color: #007bff;
 	color: #fff;
 	font-size: 16px;
