--- a/bf2/styles/fresh.css
+++ b/bf2/styles/fresh.css
@@ -38,8 +38,8 @@ textarea {
 
 }
 
-input[type="button"] {
-	flex: 0 0 900%;
+#submit-button {
+	flex: 1 0 90%;
 	background-color: #007bff;
 	color: #fff;
 	font-size: 16px;
@@ -49,6 +49,6 @@ input[type="button"] {
 	cursor: pointer;
 }
 
-input[type="button"]:hover {
+#submit-button:hover {
 	background-color: #0069d9;
 }
