--- a/bf2/styles/main.css
+++ b/bf2/styles/main.css
@@ -13,14 +13,13 @@ html{
 }
 body{
   background-color: #ff8c8c2a;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 
 }
 h1,h2,h3{
   font-family: 'Permanent Marker', Verdana, Geneva, Tahoma, sans-serif;
 }
-a,p{
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
+
 
 *{
     margin: 0;
@@ -187,7 +186,16 @@ nav a:hover {
       "a"
       "b";
     grid-template-columns: 1fr;
+    gap: 2rem;
   }
+
+  .drink-one, .drink-two{
+    width: 100%;
+    height: 8rem;
+
+  }
+
+
   .drink-one p,
 .drink-two p {display: none;}
   
@@ -196,7 +204,7 @@ nav a:hover {
 
 .drink-one .filter,
 .drink-two  .filter{
-  backdrop-filter: brightness(20%);}
+  display: none;}
 }
 
 .drink-one{
@@ -397,6 +405,7 @@ padding: 4vw;
 }
 
 .stats{
+    padding: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -421,8 +430,6 @@ footer{
     
 }
 
-footer a:hover img{
-}
 footer a{
   color: black;
   text-decoration: none;
