--- a/bf2/styles/confirmation.css
+++ b/bf2/styles/confirmation.css
@@ -1,62 +1,31 @@
 
 main{
   padding: 5vw;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
 }
-  h1 {
 
-    margin-bottom: 20px;
-  }
+h1 {
 
-  table {
-    padding: 4vw;
-    border-collapse: collapse;
-    width: 100%;
-    margin-bottom: 2rem;
-    margin-top: 2rem;
-    background-color: rgba(245, 245, 245, 0.762);
-  }
+  margin-bottom: 20px;
+}
 
-  th, td {
-    padding: 1rem;
-    text-align: left;
-    border-bottom: 1px solid #ddd;
-  }
+table {
+  padding: 2vw;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
+  background-color: rgb(255, 255, 255);
+}
 
-  th {
-    background-color: #ffffffbe;
+th, td {
+  padding: 0.3rem;
+  text-align: left;
+  border-bottom: 1px solid #b4b4b4;
+}
 
-  }
+th {
+  background-color: #ffffffbe;
+}
 
-  #return-home{
-    color: black;
-    text-decoration: none;
-    transition: ease 0.5s;
-    margin: 1rem;
-  }
-  #return-home:hover{
-    text-decoration: underline;
-    transform: scale(1.01);
-  }
-  #confirm-button{
-    background-color: #007bff;
-	color: #fff;
-	font-size: 16px;
-	padding: 10px;
-	border: none;
-	border-radius: 4px;
-	cursor: pointer;
-  }
-
-  #confirm-button:hover {
-    background-color: #0069d9;
-  }
-
-  #confirm-button:disabled {
-    background-color: #6c757d;
-    color: #fff;
-    font-size: 16px;
-    padding: 10px;
-    border: none;
-    border-radius: 4px;
-    cursor: not-allowed;
-  }
